--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,28 @@ text-align: center;
 
 color: #070707;
 }
+#textboxitem1{
+    margin-bottom: 43px;
+}
+.textbox{
+    padding-bottom: 105px;
+}
+.skill{
+    text-align: center;
+    padding-top: 91px;
+    margin-bottom: 69px;
+    font-size: 34px;
+    line-height: 42px;
+}
+.work{
+    text-align: center;
+    margin-bottom: 84px;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+}
+.skimg{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 110px;
+}
