--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,29 @@ color: #070707;
     justify-content: space-between;
     padding-bottom: 110px;
 }
+.portfolio{
+    background: #F6F6F6;
+}
+.portf{
+    padding-top: 113px;
+    text-align: center;
+    margin-bottom: 47px;
+}
+.portfoliobox{
+    text-align: center;
+}
+.portdesctxt{
+    margin-top: 45px;
+    margin-bottom: 99px;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    text-decoration-line: underline;
+
+    /* Black */
+
+    color: #070707;
+}
+#braun{
+    padding-bottom: 96px;
+}
