--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,53 @@ color: #070707;
 #braun{
     padding-bottom: 96px;
 }
+.footerbox{
+    text-align: center;
+}
+.cont{
+    font-size: 34px;
+    line-height: 42px;
+    text-align: center;
+
+    /* Black */
+
+    color: #070707;
+}
+.contdesc{
+    margin-bottom: 30px;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+
+    /* Black */
+
+    color: #070707;
+}
+.msg{
+    margin-bottom: 85px;
+    background-color: #070707;
+    padding: 15px 45px;
+    border-radius: 25px;
+    transition-duration: 0.4s;
+}
+.msg:hover{
+    background-color: #4CAF50; /* Green */
+    color: white;
+  
+}
+.btndesc{
+    font-size: 18px;
+    line-height: 22px;
+    color: #F6F6F6;
+}
+.imgcont{
+    margin-bottom: 45px;
+    display: flex;
+    justify-content: space-between;
+    max-width: 340px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.footdescend{
+    padding-bottom: 123px;
+}
